# indicatory

./: .gitignore  README.md  justfile  pyproject.toml
indicatory/: currency.py  deviations.py  means_medians.py  names.py  ohlc.py  oscillators.py  position.py  ranges_returns.py  volumes.py
notebooks/: Candlesticks_Volume.ipynb  Currencies.ipynb  Deviations.ipynb  Means_Medians.ipynb  OHLC.ipynb  Oscillators.ipynb  Ranges_Returns.ipynb  Template-AMD.ipynb  Volumes.ipynb  utils.py
tests/: test_currency.py  test_deviations.py  test_means_and_medians.py  test_ohlc.py  test_oscillators.py  test_positions.py  test_range_returns.py  test_volumes.py
tests/data/: AMD.csv  USD.csv
