[tool.poetry]
name = "indicatory"
version = "0.1.0"
description = "A small collection of stock indicator, written in Python"
authors = ["restlessbytes <markus@restless-bytes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
statsmodels = "^0.14.2"
polars = "^0.20.31"
jupyter = "^1.0.0"
hvplot = "^0.10.0"
pyarrow = "^16.1.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"
pyright = "^1.1.372"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
